--- a/index.html
+++ b/index.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
-    <link rel="icon" type="image/png" href="./images/favicon-32x32.png">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Frontend Mentor | Newsletter sign-up form with success message</title>
+  <link rel="icon" type="image/png" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <h1>Hellooooooo</h1>
-    <!-- Script -->
-    <script src="script.js"></script>
+  <main>
+
+    <!-- Sign-up form -->
+    <div class="card-container">
+      <div class="card">
+        <article class="card-content">
+          <section class="card-text-content">
+            <h1>Stay updated!</h1>
+            <p>Join 60,000+ product managers receiving monthly updates on:</p>
+            <ul>
+              <li>
+                <img src="" alt="">
+                <span>Product discovery and building what matters</span>
+              </li>
+              <li>
+                <img src="" alt="">
+                <span>Measuring to ensure updates are a success</span>
+              </li>
+              <li>
+                <img src="" alt="">
+                <span>And much more!</span>
+              </li>
+            </ul>
+          </section>
+          <form action="">
+            <label for="">Email address</label>
+            <span class="error-message">Valid email required</span>
+            <input type="email" name="" id="" placeholder="email@company.com">
+            <button>Subscribe to monthly newsletter</button>
+          </form>
+        </article>
+        <div class="card-image-container">
+          <img src="" alt="">
+        </div>
+      </div>
+    </div>
+
+    <!-- Success message -->
+    <div class="card-container">
+      <div class="card">
+        <article class="card-content">
+          <div class="image-container">
+            <img src="" alt="">
+          </div>
+          <h2>Thanks for subscribing!</h2>
+          <p>A confirmation email has been sent to <span>ash@loremcompany.com</span>. Please open it and click
+            the button inside to confirm your subscription.</p>
+          <button>Dismiss message</button>
+        </article>
+      </div>
+    </div>
+
+  </main>
+  <!-- Script -->
+  <script src="script.js"></script>
 </body>
+
 </html>
