--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
               </li>
             </ul>
           </section>
-          <form action="">
-            <label for="">Email address</label>
-            <span class="error-message">Valid email required</span>
-            <input type="email" name="" id="" placeholder="email@company.com">
-            <button>Subscribe to monthly newsletter</button>
+          <form id="form">
+            <label for="email">Email address</label>
+            <span id="error-message" class="error-message">Valid email required</span>
+            <input id="email-input-field" type="text" name="email" placeholder="email@company.com">
+            <button id="submit-button" type="submit">Subscribe to monthly newsletter</button>
           </form>
         </article>
         <div class="card-image-container">
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Success message -->
-    <div class="card-container">
+    <div id="success-message" class="card-container">
       <div class="card">
         <article class="card-content">
           <div class="image-container">
