sign up card styles

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <main>
 
     <!-- Sign-up form -->
-    <div id="sign-up-form" class="card-container">
-      <div class="card">
+    <div id="sign-up-form" class="card-container center">
+      <div id="sign-up-card" class="card">
         <article class="card-content">
           <section class="card-text-content">
             <h1>Stay updated!</h1>
@@ -50,7 +50,7 @@
 
     <!-- Success message -->
     <div id="success-message" class="card-container hidden">
-      <div class="card">
+      <div id="success-card" class="card">
         <article class="card-content">
           <div class="image-container">
             <img src="" alt="">
