--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
       <div id="sign-up-card" class="card">
         <article class="card-content">
           <section class="card-text-content">
-            <h1>Stay updated!</h1>
+            <h1 class="text__card-desktop-heading">Stay updated!</h1>
             <p>Join 60,000+ product managers receiving monthly updates on:</p>
-            <ul>
-              <li>
-                <img src="" alt="">
+            <ul class="checkmark-list">
+              <li class="checkmark-item">
+                <img src="./images/icon-list.svg" alt="Red circle with a white checkmark inside.">
                 <span>Product discovery and building what matters</span>
               </li>
-              <li>
-                <img src="" alt="">
+              <li class="checkmark-item">
+                <img src="./images/icon-list.svg" alt="Red circle with a white checkmark inside.">
                 <span>Measuring to ensure updates are a success</span>
               </li>
-              <li>
-                <img src="" alt="">
+              <li class="checkmark-item">
+                <img src="./images/icon-list.svg" alt="Red circle with a white checkmark inside.">
                 <span>And much more!</span>
               </li>
             </ul>
@@ -42,9 +42,7 @@
             <button id="submit-button" type="submit">Subscribe to monthly newsletter</button>
           </form>
         </article>
-        <div class="card-image-container">
-          <img src="" alt="">
-        </div>
+        <img class="sign-up-image" src="./images/illustration-sign-up-desktop.svg" alt="Illustration showing web performance metrics with a line graph, a score of 94, and a desktop browser window.">
       </div>
     </div>
 
@@ -52,9 +50,7 @@
     <div id="success-message" class="card-container hidden">
       <div id="success-card" class="card">
         <article class="card-content">
-          <div class="image-container">
-            <img src="" alt="">
-          </div>
+          <img class="success-image" src="" alt="">
           <h2>Thanks for subscribing!</h2>
           <p>A confirmation email has been sent to <span id="userEmail">ash@loremcompany.com</span>. Please open it and click
             the button inside to confirm your subscription.</p>
