--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
 
     <!-- Sign-up form -->
-    <div id="sign-up-form">
+    <div id="sign-up-form" class="hidden">      <!-- Ta bort hidden klassen -->
       <div class="card-container center">
         <div id="sign-up-card" class="card">
           <article class="card-content">
@@ -43,7 +43,7 @@
               </div>
               <input class="email-input-field" id="email-input-field" type="text" name="email"
                 placeholder="email@company.com">
-              <button class="submit-button" id="submit-button" type="submit">Subscribe to monthly newsletter</button>
+              <button class="button" id="submit-button" type="submit">Subscribe to monthly newsletter</button>
             </form>
           </article>
           <img class="sign-up-image" src="./images/illustration-sign-up-desktop.svg"
@@ -53,16 +53,16 @@
     </div>
 
     <!-- Success message -->
-    <div id="success-message" class="hidden">
-      <div class="card-container">
+    <div id="success-message">       <!-- Lägg till hidden klassen -->
+      <div class="card-container center">
         <div id="success-card" class="card">
-          <article class="card-content">
-            <img class="success-image" src="" alt="">
-            <h2>Thanks for subscribing!</h2>
+          <article class="success-card-content">
+            <img class="success-image" src="./images/icon-success.svg" alt="Red circle with a white checkmark inside.">
+            <h2 class="text__card-desktop-heading">Thanks for subscribing!</h2>
             <p>A confirmation email has been sent to <span id="userEmail">ash@loremcompany.com</span>. Please open it
               and click
               the button inside to confirm your subscription.</p>
-            <button id="dismiss-button">Dismiss message</button>
+            <button class="button" id="dismiss-button" type="button">Dismiss message</button>
           </article>
         </div>
       </div>
