showing sign up form on page load

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 
 <body>
   <main>
-
     <!-- Sign-up form -->
-    <div id="sign-up-form" class="hidden">      <!-- Ta bort hidden klassen -->
+    <div id="sign-up-form">
       <div class="card-container center">
         <div id="sign-up-card" class="card">
           <article class="card-content">
@@ -53,7 +52,7 @@
     </div>
 
     <!-- Success message -->
-    <div id="success-message">       <!-- Lägg till hidden klassen -->
+    <div id="success-message" class="hidden">
       <div class="card-container center">
         <div id="success-card" class="card">
           <article class="success-card-content">
@@ -67,7 +66,6 @@
         </div>
       </div>
     </div>
-
   </main>
   <!-- Script -->
   <script src="script.js"></script>
