--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="sign-up-card" class="card">
           <article class="card-content">
             <section class="card-text-content">
-              <h1 class="text__card-desktop-heading">Stay updated!</h1>
+              <h1 class="text__card-heading">Stay updated!</h1>
               <p>Join 60,000+ product managers receiving monthly updates on:</p>
               <ul class="checkmark-list">
                 <li class="checkmark-item">
@@ -45,7 +45,7 @@
               <button class="button" id="submit-button" type="submit">Subscribe to monthly newsletter</button>
             </form>
           </article>
-          <img class="sign-up-image" src="./images/illustration-sign-up-desktop.svg"
+          <img id="sign-up-image" class="sign-up-image" src="./images/illustration-sign-up-desktop.svg"
             alt="Illustration showing web performance metrics with a line graph, a score of 94, and a desktop browser window.">
         </div>
       </div>
