--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="success-card" class="card">
           <article class="success-card-content">
             <img class="success-image" src="./images/icon-success.svg" alt="Red circle with a white checkmark inside.">
-            <h2 class="text__card-desktop-heading">Thanks for subscribing!</h2>
+            <h2 class="text__card-heading">Thanks for subscribing!</h2>
             <p>A confirmation email has been sent to <span id="userEmail">ash@loremcompany.com</span>. Please open it
               and click
               the button inside to confirm your subscription.</p>
